Added changes in index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#Home">Home</a></li>
         <li><a href="#Category">Category</a></li>
         <li><a href="#Contact">Contact</a></li>
-        <li><a href="Timer.html">Typing!!</a></li>
+        <li><a href="Timer.html">Start Typing!!</a></li>
       </ul>
     </div>
   </nav>
@@ -32,7 +32,6 @@
       <li>Customize the typing test experience with different themes and options</li>
     </ul>
     <p id="justify-center">Whether you're a beginner or an experienced typist, our typing test will help you sharpen your skills and reach your typing goals. Are you ready to start the test? Just click the "Start Typing" button and let the typing journey begin!</p>
-    
   </section>
     <section id="Category">
       <br>
@@ -40,7 +39,7 @@
       <br>
       <ul>
         <li>
-          <a href="timer.html" &nbsp;>Timer Test</a>
+          <a href="Timer.html" &nbsp;>Timer Test</a>
           <p>Measure your typing speed and accuracy within a specific time duration. Test your skills under pressure and see how you perform within a given time limit. Choose from various time intervals to challenge yourself at different levels.</p>
         </li>
         <br>
